--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -17,11 +17,11 @@ body {
 }
 .display-2 {
   font-family: 'Jost', sans-serif;
-  font-size: 2.2rem;
+  font-size: 1.8rem;
   line-height: 1.1;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 2.75rem;
+  font-size: 2.25rem;
 }
 .display-4 {
   font-family: 'Jost', sans-serif;
@@ -64,9 +64,9 @@ body {
     line-height: calc( 1.1 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 1.76rem;
-    font-size: calc( 1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.3 * (1.42rem + (2.2 - 1.42) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.44rem;
+    font-size: calc( 1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.3 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.96rem;
@@ -757,9 +757,20 @@ body {
 a {
   transition: color 0.6s;
 }
+.cid-sxsrEoGGIC {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #232323;
+}
+.cid-sxsrEoGGIC .mbr-section-title {
+  color: #ff8a8a;
+}
+.cid-sxsrEoGGIC .mbr-section-subtitle {
+  color: #bbbbbb;
+}
 .cid-svvGqc1S65 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
   background-color: #1259da;
 }
 .cid-svvGqc1S65 .mbr-text,
@@ -772,20 +783,6 @@ a {
 }
 .cid-svvGqc1S65 .mbr-text,
 .cid-svvGqc1S65 .link-wrap {
-  color: #ffffff;
-}
-.cid-svvHHC5upQ {
-  padding-top: 0rem;
-  padding-bottom: 1rem;
-  background-color: #1259da;
-}
-.cid-svvHHC5upQ .line {
-  background-color: #bbbbbb;
-  align: center;
-  height: 2px;
-  margin: 0 auto;
-}
-.cid-svvHHC5upQ .mbr-text {
   color: #ffffff;
 }
 .cid-svvGF9Os6L {
