--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -760,10 +760,10 @@ a {
 .cid-sxsrEoGGIC {
   padding-top: 2rem;
   padding-bottom: 0rem;
-  background-color: #232323;
+  background-color: #1259da;
 }
 .cid-sxsrEoGGIC .mbr-section-title {
-  color: #ff8a8a;
+  color: #ffffff;
 }
 .cid-sxsrEoGGIC .mbr-section-subtitle {
   color: #bbbbbb;
@@ -771,7 +771,7 @@ a {
 .cid-svvGqc1S65 {
   padding-top: 2rem;
   padding-bottom: 3rem;
-  background-color: #1259da;
+  background-color: #000000;
 }
 .cid-svvGqc1S65 .mbr-text,
 .cid-svvGqc1S65 .mbr-section-btn {
@@ -788,7 +788,7 @@ a {
 .cid-svvGF9Os6L {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: #232323;
+  background-color: #1259da;
 }
 .cid-svvGF9Os6L .row-links {
   width: 100%;
